terraform/permissions.tf
# IAM Role for ECS Task Execution
resource "aws_iam_role" "ecs_execution_role" {
  name = "ecs_execution_role"

  assume_role_policy = jsonencode({
    Version = "2012-10-17",
    Statement = [
      {
        Action = "sts:AssumeRole",
        Effect = "Allow",
        Principal = {
          Service = "ecs-tasks.amazonaws.com"
        },
      },
    ],
  })
}

# Attaching the ECS Task Execution Role Policy
resource "aws_iam_role_policy_attachment" "ecs_execution_role_policy_attachment" {
  role       = aws_iam_role.ecs_execution_role.name
  policy_arn = "arn:aws:iam::aws:policy/service-role/AmazonECSTaskExecutionRolePolicy"
}

# Secrets manager
resource "aws_iam_policy" "secrets_manager_policy" {
  name        = "vetmyidea_sm_policy"
  description = "Policy to access Secrets Manager"

  policy = jsonencode({
    Version = "2012-10-17",
    Statement = [
      {
        Action = [
          "ssm:GetParameters",
          "secretsmanager:GetSecretValue",
        ],
        Effect   = "Allow",
        Resource = "*" 
      },
    ],
  })
}

resource "aws_iam_role_policy_attachment" "policy_attachment" {
  role       = aws_iam_role.ecs_execution_role.name
  policy_arn = aws_iam_policy.secrets_manager_policy.arn
}

# Security Groups
resource "aws_security_group" "vetmyidea_ecs_sg" {
  name        = "vetmyidea_ecs_security_group"
  description = "Security group for ECS container"
  vpc_id      = aws_vpc.vetmyidea_vpc.id

  ingress {
    from_port   = 3000
    to_port     = 3000
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 5432
    to_port     = 5432
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "vetmyidea_ecs_sg"
  }
}

resource "aws_security_group" "vetmyidea_lb_sg" {
  name        = "vetmyidea_lb_security_group"
  description = "Security group for load balancer"
  vpc_id      = aws_vpc.vetmyidea_vpc.id

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "vetmyidea_lb_sg"
  }
}

resource "aws_security_group" "vetmyidea_db_sg" {
  name        = "vetmyidea_db_sg"
  vpc_id      = aws_vpc.vetmyidea_vpc.id
  description = "Security group for PostgreSQL RDS instance"

  ingress {
    from_port   = 5432
    to_port     = 5432
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"] 
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "vetmyidea_db_sg"
  }
}

# Website redirect
resource "aws_s3_bucket_policy" "bucket_policy" {
  bucket = aws_s3_bucket.redirect_bucket.id

  policy = <<POLICY
{
  "Version":"2012-10-17",
  "Statement":[
    {
      "Effect":"Allow",
      "Principal": "*",
      "Action":"s3:GetObject",
      "Resource":["${aws_s3_bucket.redirect_bucket.arn}/*"]
    }
  ]
}
POLICY
}
